[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gel-band-size-calculator"
version = "0.1.0"
description = "A simple tool to estimate DNA band size from gel electrophoresis data"
authors = [
  {name = "Kyungkuk Min"}
]
requires-python = ">=3.8"

[project.scripts]
gelcalc = "band_calculator:main"
